# hoi_recon

./: .gitignore  DESIGN.md  IMPLEMENTATION_SUMMARY.md  README.md  REPRODUCE.md  RESEARCH_DIRECTIONS.md  environment.yml  pipeline_report.html  pyproject.toml  requirements-backends.txt
configs/: choir.yaml  choir_faithful.yaml  combined.yaml  combined_v2.yaml  default.yaml  egocentric.yaml  new.yaml  third_person.yaml
hoi_recon/: __init__.py  bundle.py  choir.py  cli.py  config.py  geometry.py  joint_grasp.py  logging_utils.py  object_pose_track.py  pipeline.py
hoi_recon/backends/: __init__.py  perception.py  real_perception.py
hoi_recon/choir_fine/: __init__.py  anatomical.py  contact.py  metrics.py  phases.py  presets.py  registry.py  step.py  terms_torch.py
hoi_recon/mock/: scene.py
hoi_recon/stages/: __init__.py  _scene.py  stage0_preprocess.py  stage1_detect_track.py  stage2_hand.py  stage3_object.py  stage4_align.py  stage5_coarse_fit.py  stage6_rectify.py  stage7_contact_optim.py  stage8_eval.py
hoi_recon/viz/: reproject.py  viser_app.py
scripts/: check_env.py  compare_coarse.py  download_checkpoints.sh  object_confidence.py  reproject_overlay.py  run_demo.sh  setup_choir_envs.sh  setup_real.sh  setup_third_party.sh  view_demo.sh
scripts/subprocess_entries/vggt/: vggt_geom.py
tests/: test_choir_fine_anatomical.py  test_choir_fine_configs.py  test_choir_fine_contact.py  test_choir_fine_metrics.py  test_choir_fine_phases.py  test_choir_fine_presets.py  test_choir_fine_registry.py  test_choir_fine_step.py  test_choir_fine_terms.py  test_smoke.py
(+12 files in other folders)
